--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    hiii
-    Hello welcome to my website
+    hiii Hello welcome to my website
   </body>
 </html>
